force-app/main/default/objects/Sync_Job__c/Sync_Job__c.object-meta.xml
<CustomObject>
    <label>Sync Job</label>
    <pluralLabel>Sync Jobs</pluralLabel>
    <nameField>
        <displayFormat>SYNC-{0000000}</displayFormat>
        <label>Sync Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>