force-app/main/default/objects/Sync_Job__c/fields/API_Calls__c.field-meta.xml
<CustomField>
    <fullName>API_Calls__c</fullName>
    <label>API Calls</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>