force-app/main/default/objects/Sync_Job__c/fields/Contributors_Synced__c.field-meta.xml
<CustomField>
    <fullName>Contributors_Synced__c</fullName>
    <description>Number of contributors synced in this job</description>
    <label>Contributors Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>