force-app/main/default/objects/Sync_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GitHub Sync</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Metrics Calculation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>