force-app/main/default/objects/Sync_Job__c/fields/Open_Pull_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Pull_Requests__c</fullName>
    <description>Number of open pull requests synced in this job</description>
    <label>Open Pull Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>