force-app/main/default/objects/Sync_Job__c/fields/Pull_Requests_Synced__c.field-meta.xml
<CustomField>
    <fullName>Pull_Requests_Synced__c</fullName>
    <description>Number of pull requests synced in this job</description>
    <label>Pull Requests Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>