force-app/main/default/objects/Sync_Job__c/fields/Records_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Records_Inserted__c</fullName>
    <label>Records Inserted</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>