force-app/main/default/objects/Sync_Job__c/fields/Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Records_Updated__c</fullName>
    <label>Records Updated</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>