force-app/main/default/objects/Sync_Job__c/fields/Repositories_Synced__c.field-meta.xml
<CustomField>
    <fullName>Repositories_Synced__c</fullName>
    <description>Number of repositories synced in this job</description>
    <label>Repositories Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>